--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,38 @@
+p {
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
+}
+
+#mainPage {
+    display: grid;
+    grid-template-columns: 200px 1fr;
+    grid-template-rows: 100px minmax(87vh, 1fr);
+    background-color: #E1D7B7;
+}
+
+#mainPage > header {
+    grid-row: 1/3;
+    grid-column: 1/3;
+    background-color: #7C93C3;
+    text-align: center;
+}
+
+#title {
+    background-color: #1E2A5E;
+    color: white;
+    text-decoration: underline;
+}
+
+#content {
+    grid-column: 2/3;
+    grid-row: 2/3;
+    display: grid;
+    grid-template-columns: repeat(auto-fill, fill);
+    grid-template-rows: repeat(auto-fill, 250px);
+    gap: 20px;
+    overflow: auto;
+    background-color: #E1D7B7;
+}
+
 .URGENT {
     background-color: brown;
     font-weight: bolder;
@@ -11,4 +46,5 @@
 
 .NO_HURRY {
     background-color: rgb(51, 172, 14);
+    font-weight: 500;
 }
