Creation of the "erase button" (For Row and items) are complete. Next step is to add some kind of confirmation, before performing full deleting. Then it's time to add some "new item" and "new row" for this website.

--- a/src/styles.css
+++ b/src/styles.css
@@ -33,6 +33,11 @@ p {
     background-color: #E1D7B7;
 }
 
+button:hover {
+    background-color: #c0392b;
+    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2);
+}
+
 .URGENT {
     background-color: brown;
     font-weight: bolder;
