Creation of the new item addition via Modal. The erase method is also available.

--- a/src/styles.css
+++ b/src/styles.css
@@ -38,6 +38,25 @@ button:hover {
     box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2);
 }
 
+#content .addButton::before,
+#content .addButton::after {
+    content: '';
+    position: absolute;
+    width: 120px;
+    height: 10px;
+    background-color: rgb(133, 129, 129);
+    margin-top: 120px;
+    margin-left: 7px;
+}
+
+#content .addButton::before {
+    transform: rotate(180deg);
+}
+
+#content .addButton::after {
+    transform: rotate(-90deg);
+}
+
 .URGENT {
     background-color: brown;
     font-weight: bolder;
