--- a/src/styles.css
+++ b/src/styles.css
@@ -4,14 +4,14 @@ p {
 
 #mainPage {
     display: grid;
-    grid-template-columns: 200px 1fr;
+    grid-template-columns: 70px 1fr 70px;
     grid-template-rows: 100px minmax(87vh, 1fr);
     background-color: #E1D7B7;
 }
 
 #mainPage > header {
     grid-row: 1/3;
-    grid-column: 1/3;
+    grid-column: 1/4;
     background-color: #7C93C3;
     text-align: center;
 }
@@ -28,7 +28,7 @@ p {
     display: grid;
     grid-template-columns: repeat(auto-fill, fill);
     grid-template-rows: repeat(auto-fill, 250px);
-    gap: 20px;
+    gap: 80px;
     overflow: auto;
     background-color: #E1D7B7;
 }
